unpackaged/main/default/objects/fferpcore__IHCCIntegration_Lock__c/fferpcore__IHCCIntegration_Lock__c.object-meta.xml
<CustomObject>
    <description>This lock object is used for integration core queue process.</description>
    <label>Integration Core Queue Lock</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Core Queue Locks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>