unpackaged/main/default/objects/fferpcore__IHCCIntegration_Lock__c/fields/fferpcore__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Last_Updated__c</fullName>
    <description>Displays the last time this lock was updated.</description>
    <inlineHelpText>Displays the last time this lock was updated.</inlineHelpText>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>