unpackaged/main/default/objects/fferpcore__IHCCIntegration_Lock__c/fields/fferpcore__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Unique_Key__c</fullName>
    <description>Field to uniquely identify Locks</description>
    <inlineHelpText>Field to uniquely identify Locks</inlineHelpText>
    <label>Unique Key</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>